<resources>
    <string name="app_name">Renty</string>
    <string name="renty">Renty</string>
    <string name="splash_intro">Find your rent, list your property and manage it in just simple steps.</string>
    <string name="get_started">Get started</string>
    <string name="title_activity_host">HostActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Reports</string>
    <string name="title_notifications">Profile</string>
    <string name="syndic">Syndic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>